--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-232.9KB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.23MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.11MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-434.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-684.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.07MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-738.0KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-373.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-153.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-208.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-485.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇦🇺 澳大利亚-755.8KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-437.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-684.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-208.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-485.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-755.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-684.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-208.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-485.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-755.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-684.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-208.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-485.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-755.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-684.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-208.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-485.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-755.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-684.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-208.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-485.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-755.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-684.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-208.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-485.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-755.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-684.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-738.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-208.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-485.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-755.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
