--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-373.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-418.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-150.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇯🇵 日本-779.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-2.67MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.12MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-998.2KB/s(Youtube:不良林), server: 38.86.135.36, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-215.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-401.4KB/s(Youtube:不良林), server: 38.86.135.36, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1003.2KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇬🇧 英国-493.0KB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-998.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-998.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-998.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-998.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-998.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-998.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-373.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-998.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
