--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-418.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-150.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-170.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.02MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-779.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-215.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-401.4KB/s(Youtube:不良林), server: 38.86.135.36, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1003.2KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-493.0KB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
-  - {name: 🇺🇸 美国-236.6KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-487.3KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-370.3KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-779.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
