--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-170.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.72MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活2天)香港-257.2KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇨🇳 中国-4.02MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇨🇳 中国-487.3KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇺🇸 美国-370.3KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-336.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-291.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-257.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-257.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-257.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-257.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-257.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-257.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-257.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-170.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-257.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-487.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-291.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-824.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
